# aineer

./: .gitignore  CODINEER.md  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  biome.json  components.json  index.html  package.json  settings.example.json  tsconfig.json  vite.config.ts
.aineer/: .gitignore  AINEER.md
.aineer/specs/: product-tech-design.md
.codineer/: .gitignore  CODINEER.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
Formula/: codineer.rb
app/: Cargo.toml  tauri.conf.json
app/capabilities/: webai-remote.json  webauth-local.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs  pty_manager.rs  session.rs  system_tray.rs
app/src/commands/: ai.rs  (+10 more)
crates/api/: Cargo.toml  README.md  README_CN.md
crates/api/src/: cache_strategy.rs  client.rs  error.rs  lib.rs  sse.rs  types.rs
crates/api/src/providers/: aineer_provider.rs  aineer_provider_tests.rs  codineer_provider.rs  codineer_provider_tests.rs  mod.rs  openai_compat.rs  openai_compat_sse.rs  openai_compat_stream.rs  openai_compat_tests.rs
crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: agent.rs  app.rs  application.rs  branding.rs  bridge.rs  main.rs  platform.rs  resources.rc  session.rs  singleton.rs  ssh.rs  tabs.rs  theme.rs  updater.rs  workspace.rs
crates/auto_update/: Cargo.toml
crates/channels/: Cargo.toml
crates/cli/: Cargo.toml  README.md  README_CN.md
crates/cli/src/: auth.rs  auto_update.rs  banner.rs  bootstrap.rs  cli.rs  config_cmd.rs  desktop.rs  error.rs  help.rs  image_util.rs  init.rs  lib.rs  live_cli.rs  lsp_detect.rs  main_tests.rs  models_cmd.rs  render.rs  reports.rs  resume.rs  session_store.rs  style.rs  terminal_width.rs  tracing_observer.rs  turn_helpers.rs  workspace.rs
crates/cli/src/input/: editor.rs  suggestions.rs  text.rs
crates/cli/src/runtime_client/: messages.rs  mod.rs  model.rs  permission.rs  stream.rs  tests.rs  tool_executor.rs
crates/codineer-cli/: Cargo.toml  README.md  README_CN.md
crates/codineer-core/: Cargo.toml  README.md  README_CN.md
crates/codineer-core/src/: config.rs  credentials_types.rs  elicitation.rs  error.rs  events.rs  gemini_cache.rs  lib.rs  loop_state.rs  oauth.rs  observer.rs
crates/commands/: Cargo.toml  README.md  README_CN.md
crates/commands/src/: discovery.rs  git.rs  lib.rs  plugins_cmd.rs  slash_spec.rs  tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: conversation.rs  hooks.rs  lib.rs  oauth.rs  prompt.rs  recovery.rs  streaming_tool_executor.rs  tool_orchestration.rs
crates/engine/src/commands/: mod.rs  plugins_cmd.rs  tests.rs
crates/engine/src/config/: types.rs
crates/engine/src/credentials/: mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  lib.rs  server.rs  types.rs
crates/lsp/: Cargo.toml  README.md  README_CN.md
crates/lsp/src/: client.rs  error.rs  lib.rs  manager.rs  types.rs
crates/mcp/: Cargo.toml  README.md  README_CN.md
crates/mcp/src/: client.rs  config.rs  lib.rs  naming.rs  remote.rs
crates/mcp/src/stdio/: manager.rs  mod.rs  process.rs  tests.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/plugins/: Cargo.toml  README.md  README_CN.md
crates/plugins/bundled/example-bundled/.codineer-plugin/: plugin.json
crates/plugins/src/: bundled.rs  constants.rs  definition.rs  directory_layout.rs  error.rs  hooks.rs  install.rs  lib.rs  manager.rs  manifest.rs  resolve.rs  tests.rs  types.rs
crates/protocol/: Cargo.toml  README.md  README_CN.md
crates/protocol/src/: credentials_types.rs  error.rs  hook_config.rs  lib.rs  oauth.rs  telemetry.rs
crates/provider/: Cargo.toml
crates/release_channel/: Cargo.toml
crates/runtime/: Cargo.toml  README.md  README_CN.md
crates/runtime/src/: bash.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  json.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_remote.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  recovery.rs  remote.rs  sandbox.rs  session.rs  streaming_tool_executor.rs  swarm.rs  tool_orchestration.rs  usage.rs
crates/runtime/src/compact/: microcompact.rs  mod.rs  reactive.rs
crates/runtime/src/config/: loader.rs  mod.rs  tests.rs  types.rs
crates/runtime/src/credentials/: mod.rs  oauth_resolver.rs
crates/runtime/src/mcp_stdio/: manager.rs  mod.rs  process.rs  tests.rs  types.rs
crates/settings/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal/src/: bindings.rs  lib.rs  mappings.rs  pty.rs  render.rs  theme.rs  view.rs
crates/terminal/src/backend/: mod.rs
crates/theme/: Cargo.toml
crates/tools/: .gitignore  Cargo.toml  README.md  README_CN.md
crates/tools/src/: agent.rs  builtin.rs  collab.rs  config_tool.rs  cron.rs  lib.rs  lsp_tool.rs  mcp_resource.rs  notebook.rs  plan_mode.rs  powershell.rs  registry.rs  specs.rs  task.rs  tool_output.rs  types.rs  web.rs  worktree.rs
crates/tools/src/tests/: mod.rs  suite1.rs  suite2.rs
crates/ui/: Cargo.toml
crates/ui/src/: cards.rs  chat_card.rs  completer.rs  diff_panel.rs  git_diff.rs  git_watcher.rs  icons.rs  input_bar.rs  lib.rs  search_bar.rs  shell_card.rs  theme.rs  timeline.rs  toolbar.rs
crates/ui/src/blocks/: mod.rs
crates/ui/src/settings/: advanced.rs  bar.rs  gateway.rs  general.rs  json_editor.rs  mod.rs  model.rs  permissions.rs  plugins.rs  shell.rs
crates/ui/src/widgets/: activity_bar.rs  command_palette.rs  empty_state.rs  explorer.rs  icon_button.rs  mod.rs  section_card.rs  settings_row.rs  status_badge.rs  status_bar.rs  toast.rs
docs/design/: aineer-product-tech-design.md
docs/proposals/: ui-upgrade-plan.md
script/: bundle-linux  bundle-mac  bundle-win  gen-icons.swift
scripts/: version-bump.ts
ui/: App.tsx  main.tsx
ui/__tests__/: constants.test.ts  format.test.ts  types.test.ts
ui/components/: ChatView.tsx  Sidebar.tsx  TaskQueueBar.tsx
ui/hooks/: useChatExecution.ts  useWorkspace.ts
ui/lib/: constants.ts  format.ts  highlighter.ts  tauri.ts  theme.ts  types.ts
ui/styles/: globals.css
(+92 files in other folders)
