[workspace]
members = ["crates/*"]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["andeya <andeyalee@outlook.com>"]
repository = "https://github.com/andeya/aineer"
homepage = "https://github.com/andeya/aineer"
documentation = "https://github.com/andeya/aineer"
keywords = ["ai", "coding-agent", "cli", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
protocol = { path = "crates/protocol", version = "*", package = "aineer-protocol" }
api = { path = "crates/api", version = "*", package = "aineer-api" }
lsp = { path = "crates/lsp", version = "*", package = "aineer-lsp" }
mcp = { path = "crates/mcp", version = "*", package = "aineer-mcp" }
plugins = { path = "crates/plugins", version = "*", package = "aineer-plugins" }
engine = { path = "crates/engine", version = "*", package = "aineer-engine" }
tools = { path = "crates/tools", version = "*", package = "aineer-tools" }
terminal = { path = "crates/terminal", version = "*", package = "aineer-terminal" }
ui = { path = "crates/ui", version = "*", package = "aineer-ui" }
cli = { path = "crates/cli", version = "*", package = "aineer-cli" }
gateway = { path = "crates/gateway", version = "*", package = "aineer-gateway" }

base64 = "0.22"
git2 = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
] }
wgpu = "27"
egui_commonmark = "0.22"
axum = "0.8"
lsp-types = "0.97"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
strum = { version = "0.27", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
