[package]
name = "codineer-api"
description = "AI provider API clients and streaming for Codineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
codineer-core.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }

[lints]
workspace = true
