[package]
name = "aineer-api"
description = "AI provider API clients and streaming for Aineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
aineer-protocol.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
