[package]
name = "aineer-cli"
description = "Aineer CLI mode — terminal-based AI coding agent REPL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
aineer-api.workspace = true
base64.workspace = true
aineer-protocol.workspace = true
aineer-engine.workspace = true
crossterm = "0.28"
pulldown-cmark = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
rustyline = "15"
aineer-plugins.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
syntect = "5"
tokio.workspace = true
aineer-tools.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.2"
arboard = "3.6.1"
flate2 = "1"
png = "0.18"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []

[lints]
workspace = true
