[package]
name = "codineer-commands"
description = "Slash commands and agent/skill discovery for Codineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
codineer-core.workspace = true
plugins.workspace = true
runtime.workspace = true
serde_json.workspace = true

[lints]
workspace = true
