[package]
name = "aineer-gateway"
description = "Aineer embedded model gateway — OpenAI-compatible HTTP proxy with multi-provider routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aineer-api.workspace = true
aineer-protocol.workspace = true
aineer-webai.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-stream = "0.3"
futures-core = "0.3"

[lints]
workspace = true
