[package]
name = "aineer-lsp"
description = "Language Server Protocol client integration for Aineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lsp-types = "0.97"
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tokio.workspace = true
url = "2"

[lints]
workspace = true
