[package]
name = "codineer-mcp"
description = "MCP (Model Context Protocol) client, server management, and config types for Codineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
codineer-core.workspace = true
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[lints]
workspace = true
