[package]
name = "aineer-mcp"
description = "MCP (Model Context Protocol) client, server management, and config types for Aineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aineer-protocol.workspace = true
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[lints]
workspace = true
