[package]
name = "aineer-protocol"
description = "Agent protocol definitions for Aineer: events, observer, cancellation, errors, hook config"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
getrandom = "0.2"
keyring = { version = "3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
strum.workspace = true
thiserror.workspace = true

[lints]
workspace = true
