[package]
name = "aineer-tools"
description = "AI-callable tool definitions and execution for Aineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aineer-api.workspace = true
git2.workspace = true
aineer-lsp.workspace = true
lsp-types = "0.97"
aineer-plugins.workspace = true
aineer-engine.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
