[package]
name = "aineer-ui"
version.workspace = true
edition.workspace = true

[dependencies]
aineer-terminal = { workspace = true }
aineer-theme = { workspace = true }
aineer-provider = { workspace = true }
aineer-settings = { workspace = true }
aineer-protocol = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
git2 = { workspace = true }
syntect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
